tests/errors/bad_mov.asm
FUNC LABEL 0
    MOV STK A VAL 9
    MOV VAL 6 STK A
    PRINT STK A
    RET
